contac page changed

--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,12 @@
     <section class="nav-bar">
         <div class="logo">Go Trip</div>
         <ul class="menu">
-            <li><a href="#">home</a></li>
-            <li><a href="#">tours</a></li>
-            <li><a href="#">package</a></li>
-            <li><a href="#">blog</a></li>
-            <li><a href="#">about us</a></li>
-            <li><a href="#">contact us</a></li>
+            <li><a href="index.html">home</a></li>
+            <li><a href="blogs.html">tours</a></li>
+            <li><a href="blogs.html">package</a></li>
+            <li><a href="blogs.html">blog</a></li>
+            <li><a href="aboutus.html">about us</a></li>
+            <li><a href="contact.html">contact us</a></li>
         </ul>
         </div>
      
