--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="logo">Travel Lovers</div>
 
     <ul class="menu">
-        <li><a href="home.html">home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="blogs.html">destinations</a></li>
         <li><a href="./aboutus.html">about us</a></li>
         <li><a href="Subscription (1).html">Subscribe</a></li>
-        <li><a href="index.html">contact us</a></li>
+        <li><a href="contact.html">contact us</a></li>
     </ul>
     </div>
 </section>
