--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,7 @@
  <!Doctype Html>
  <Html>   
  <Head>   
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="./css/style1.css">
  <Title>   
  Make a Navigation Bar
  </Title>
