--- a/aboutus.html
+++ b/aboutus.html
@@ -3,10 +3,25 @@
     <head>
         <title> ABOUT US</title>
         <link rel="stylesheet" href="./css/aboutus.css">
+        <link rel="stylesheet" href="./css/home.css">
         </head>
         <body style="background-image: url(./images/aboutus.png); background-size: cover; background-position: center center">
 
-
+          <!--navbar-->
+          <section class="nav-bar">
+            <div class="logo">Travel Lovers</div>
+        
+            <ul class="menu">
+                <li><a href="index.html">home</a></li>
+                <li><a href="blogs.html">destinations</a></li>
+                <li><a href="./aboutus.html">about us</a></li>
+                <li><a href="Subscription (1).html">Subscribe</a></li>
+                <li><a href="contact.html">contact us</a></li>
+            </ul>
+            </div>
+        </section>
+        <br>
+        <br>
 <div class="responsive-container-block outer-container">
     <div class="responsive-container-block inner-container">
       <div class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-4 wk-ipadp-5 content-container">
