--- a/page2.html
+++ b/page2.html
@@ -10,9 +10,22 @@
 
     <title>List of blogs 2 </title>
     <link rel="icon" href="./images/icon2.jpg" type="image">
-
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
+  <!--navbar-->
+  <section class="nav-bar">
+    <div class="logo">Travel Lovers</div>
+
+    <ul class="menu">
+        <li><a href="index.html">home</a></li>
+        <li><a href="blogs.html">destinations</a></li>
+        <li><a href="./aboutus.html">about us</a></li>
+        <li><a href="Subscription (1).html">Subscribe</a></li>
+        <li><a href="contact.html">contact us</a></li>
+    </ul>
+    </div>
+</section>
     <div id="main-content" class="blog-page">
         <div class="container">
             <div class="row clearfix">
